package org.example;

import com.google.protobuf.Empty;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import io.grpc.stub.StreamObserver;
import java.util.concurrent.CountDownLatch;
import java.util.concurrent.TimeUnit;

public class LogClient {

    public static void main(String[] args) throws InterruptedException {
        // 1. Kanal zum Server √∂ffnen
        ManagedChannel channel = ManagedChannelBuilder
                .forAddress("localhost", 50051)
                .usePlaintext()
                .build();

        // 2. Stub f√ºr asynchrone gRPC-Aufrufe
        LogServiceGrpc.LogServiceStub stub = LogServiceGrpc.newStub(channel);

        // 3. Latch f√ºr Synchronisation (damit main nicht vorzeitig endet)
        CountDownLatch finishLatch = new CountDownLatch(1);

        // 4. Antwort-Observer f√ºr AddLog (f√ºr die serverseitige Antwort: Empty)
        StreamObserver<Empty> responseObserver = new StreamObserver<>() {
            @Override
            public void onNext(Empty empty) {
                System.out.println("‚úÖ Server hat alle Logs erhalten.");
            }

            @Override
            public void onError(Throwable t) {
                System.err.println("‚ùå Fehler bei AddLog: " + t.getMessage());
                finishLatch.countDown();
            }

            @Override
            public void onCompleted() {
                System.out.println("üîö AddLog-Stream abgeschlossen.");
                finishLatch.countDown();
            }
        };

        // 5. Request-Stream an den Server senden (AddLog)
        StreamObserver<Log> requestObserver = stub.addLog(responseObserver);

        try {
            // Beispiel-Logs senden
            requestObserver.onNext(Log.newBuilder()
                    .setUsrId("user123")
                    .setLogText("Erster Logeintrag")
                    .build());

            requestObserver.onNext(Log.newBuilder()
                    .setUsrId("user456")
                    .setLogText("Zweiter Logeintrag")
                    .build());

            requestObserver.onNext(Log.newBuilder()
                    .setUsrId("user789")
                    .setLogText("Dritter Logeintrag")
                    .build());

            // Stream abschlie√üen (nichts mehr senden)
            requestObserver.onCompleted();

        } catch (Exception e) {
            requestObserver.onError(e);
            throw e;
        }

        // 6. Auf Abschluss warten
        if (!finishLatch.await(5, TimeUnit.SECONDS)) {
            System.err.println("‚ö†Ô∏è Timeout beim Warten auf Serverantwort");
        }

        // 7. Test f√ºr GetLog hinzuf√ºgen
        getLogs(stub);

        // 8. Verbindung schlie√üen
        channel.shutdownNow();
    }

    // Methode, die die `GetLog`-Methode des Servers testet
    private static void getLogs(LogServiceGrpc.LogServiceStub stub) throws InterruptedException {
        System.out.println("\nüîÑ Holen der Logs...");

        // CountDownLatch f√ºr Synchronisation
        CountDownLatch finishLatch = new CountDownLatch(1);

        // Antwort-Observer f√ºr GetLog
        StreamObserver<ListLoggedLog> responseObserver = new StreamObserver<>() {
            @Override
            public void onNext(ListLoggedLog listLoggedLog) {
                System.out.println("‚úÖ Logs empfangen:");
                listLoggedLog.getLogsList().forEach(log -> {
                    System.out.println("Zeilennummer: " + log.getLineNumber() + ", Log: " + log.getLog().getLogText() + ", User: " + log.getLog().getUsrId());
                });
            }

            @Override
            public void onError(Throwable t) {
                System.err.println("‚ùå Fehler bei GetLog: " + t.getMessage());
                finishLatch.countDown();
            }

            @Override
            public void onCompleted() {
                System.out.println("üîö GetLog abgeschlossen.");
                finishLatch.countDown();
            }
        };

        // Sende leeren Request (Google Empty) f√ºr GetLog
        stub.getLog(Empty.getDefaultInstance(), responseObserver);

        // Warten auf Antwort
        if (!finishLatch.await(5, TimeUnit.SECONDS)) {
            System.err.println("‚ö†Ô∏è Timeout beim Warten auf Serverantwort");
        }
    }
}
